# integration-platform-api

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/core/: config.py  logging.py  security.py
app/api/db/: session.py
app/api/models/: client.py  integration.py
app/api/routes/: clients.py  health.py  integrations.py
app/api/schemas/: client.py  integration.py
app/api/services/: external_api.py  integration_services.py
app/tests/: conftest.py  test_clients.py  test_health.py  test_security.py
